--- a/sonos-widget/Base.lproj/Main.storyboard
+++ b/sonos-widget/Base.lproj/Main.storyboard
@@ -15,37 +15,47 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-ps-QC9">
-                                <rect key="frame" x="20" y="58" width="560" height="522"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-ps-QC9">
+                                <rect key="frame" x="20" y="58" width="374" height="658"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="pZK-a8-63q">
-                                        <rect key="frame" x="0.0" y="28" width="560" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="374" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pZK-a8-63q" id="q1f-AQ-Dcc">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTV-aJ-ANB">
-                                <rect key="frame" x="534" y="20" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTV-aJ-ANB">
+                                <rect key="frame" x="328" y="28" width="53" height="30"/>
+                                <state key="normal" title="Refresh"/>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-jr-gr2">
+                                <rect key="frame" x="303" y="33" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9rX-ps-QC9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="PYS-q7-2Zi"/>
-                            <constraint firstItem="9rX-ps-QC9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="QI8-B1-3dv"/>
-                            <constraint firstItem="9rX-ps-QC9" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="okw-Sa-fJI"/>
-                            <constraint firstAttribute="bottom" secondItem="9rX-ps-QC9" secondAttribute="bottom" constant="20" symbolic="YES" id="z3B-35-WMo"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="9rX-ps-QC9" secondAttribute="leading" id="02Z-n0-lo7"/>
+                            <constraint firstItem="9rX-ps-QC9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="38" id="AZy-ja-fna"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9rX-ps-QC9" secondAttribute="bottom" constant="20" id="FWb-87-n9U"/>
+                            <constraint firstItem="KTV-aJ-ANB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Jcn-lm-5yp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9rX-ps-QC9" secondAttribute="trailing" id="S6i-ro-bai"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KTV-aJ-ANB" secondAttribute="trailing" constant="13" id="Y4h-nk-18J"/>
+                            <constraint firstItem="KTV-aJ-ANB" firstAttribute="leading" secondItem="j2e-jr-gr2" secondAttribute="trailing" constant="5" id="kqu-YO-ozy"/>
+                            <constraint firstItem="j2e-jr-gr2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="13" id="nev-Qh-rxn"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="j2e-jr-gr2" id="xq5-vB-Fah"/>
+                        <outlet property="refreshButton" destination="KTV-aJ-ANB" id="bej-FM-OpX"/>
                         <outlet property="tableView" destination="9rX-ps-QC9" id="Wva-SV-fob"/>
                     </connections>
                 </viewController>
