--- a/sonos-widget/Base.lproj/Main.storyboard
+++ b/sonos-widget/Base.lproj/Main.storyboard
@@ -18,8 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-ps-QC9">
-                                <rect key="frame" x="20" y="58" width="374" height="658"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTV-aJ-ANB">
+                                <rect key="frame" x="328" y="28" width="53" height="30"/>
+                                <state key="normal" title="Refresh"/>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-jr-gr2">
+                                <rect key="frame" x="303" y="33" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-ps-QC9">
+                                <rect key="frame" x="20" y="39" width="374" height="658"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupMemberCell" id="pZK-a8-63q">
@@ -30,51 +37,53 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZoneGroupCell" rowHeight="50" id="eC9-lE-Cu3" customClass="ZoneGroupHeaderCell" customModule="sonos_widget" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="374" height="50"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZoneGroupCell" rowHeight="76" id="eC9-lE-Cu3" customClass="ZoneGroupHeaderCell" customModule="sonos_widget" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="72" width="374" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eC9-lE-Cu3" id="4cT-th-d91">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="49.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="75.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Some Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssr-fH-XUT">
-                                                    <rect key="frame" x="18" y="13" width="90" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Track title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssr-fH-XUT">
+                                                    <rect key="frame" x="18" y="8" width="274" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pEn-1O-ftW">
-                                                    <rect key="frame" x="314" y="-2" width="50" height="50"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="25" id="THA-Db-drW"/>
-                                                    </constraints>
+                                                <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pEn-1O-ftW">
+                                                    <rect key="frame" x="300" y="12" width="50" height="50"/>
+                                                    <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                                     <state key="normal" image="Play"/>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCk-m0-kYC">
+                                                    <rect key="frame" x="18" y="31" width="68" height="13.5"/>
+                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="11"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="pEn-1O-ftW" secondAttribute="trailing" constant="15" id="3fg-Ga-rHz"/>
-                                                <constraint firstItem="Ssr-fH-XUT" firstAttribute="centerY" secondItem="pEn-1O-ftW" secondAttribute="centerY" id="5bW-Rd-flU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="pEn-1O-ftW" secondAttribute="bottom" constant="5.5" id="QP2-cH-YZa"/>
-                                                <constraint firstItem="pEn-1O-ftW" firstAttribute="top" secondItem="4cT-th-d91" secondAttribute="topMargin" constant="3" id="XWi-PU-ffy"/>
-                                                <constraint firstItem="Ssr-fH-XUT" firstAttribute="leading" secondItem="4cT-th-d91" secondAttribute="leadingMargin" constant="10" id="mHJ-XV-uaL"/>
-                                                <constraint firstItem="Ssr-fH-XUT" firstAttribute="top" secondItem="4cT-th-d91" secondAttribute="topMargin" constant="5" id="ut1-xR-rnQ"/>
+                                                <constraint firstItem="pEn-1O-ftW" firstAttribute="leading" secondItem="4cT-th-d91" secondAttribute="leadingMargin" constant="292" id="0dZ-Ly-UTm"/>
+                                                <constraint firstItem="Ssr-fH-XUT" firstAttribute="leading" secondItem="4cT-th-d91" secondAttribute="leadingMargin" constant="10" id="2aJ-Qb-K5p"/>
+                                                <constraint firstItem="aCk-m0-kYC" firstAttribute="top" secondItem="Ssr-fH-XUT" secondAttribute="bottom" constant="5" id="8ic-zU-cZW"/>
+                                                <constraint firstItem="pEn-1O-ftW" firstAttribute="centerY" secondItem="4cT-th-d91" secondAttribute="centerY" id="Bh7-vZ-97s"/>
+                                                <constraint firstItem="pEn-1O-ftW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ssr-fH-XUT" secondAttribute="trailing" constant="8" id="Kg7-g5-zRd"/>
+                                                <constraint firstItem="aCk-m0-kYC" firstAttribute="trailing" secondItem="Ssr-fH-XUT" secondAttribute="trailing" id="LSO-Vs-Xyk"/>
+                                                <constraint firstItem="aCk-m0-kYC" firstAttribute="centerX" secondItem="Ssr-fH-XUT" secondAttribute="centerX" id="cxT-F2-Uvv"/>
+                                                <constraint firstAttribute="topMargin" secondItem="Ssr-fH-XUT" secondAttribute="top" id="juS-4V-CSM"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="pEn-1O-ftW" secondAttribute="bottom" constant="5.5" id="xNF-kg-Hm9"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pEn-1O-ftW" secondAttribute="trailing" constant="15" id="zQO-Au-xZF"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <connections>
+                                            <outlet property="artistLabel" destination="aCk-m0-kYC" id="dlJ-1U-tji"/>
                                             <outlet property="headerLabel" destination="Ssr-fH-XUT" id="g3K-nf-N4P"/>
                                             <outlet property="zoneGroupStateButon" destination="pEn-1O-ftW" id="eOR-4W-tI4"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTV-aJ-ANB">
-                                <rect key="frame" x="328" y="28" width="53" height="30"/>
-                                <state key="normal" title="Refresh"/>
-                            </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-jr-gr2">
-                                <rect key="frame" x="303" y="33" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
