Fixes up pause/play
...intializes state from api call

--- a/SonosTodayExtension/Base.lproj/MainInterface.storyboard
+++ b/SonosTodayExtension/Base.lproj/MainInterface.storyboard
@@ -22,11 +22,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="102.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wAc-PS-jCv">
-                                            <rect key="frame" x="259" y="7" width="46" height="89"/>
-                                            <state key="normal" title="Button">
-                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wAc-PS-jCv">
+                                            <rect key="frame" x="244" y="40" width="76" height="22"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <state key="normal" image="Play"/>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="ZoneGroupLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gu-iq-Yl4">
                                             <rect key="frame" x="0.0" y="11" width="108" height="80"/>
@@ -62,4 +62,7 @@
             <point key="canvasLocation" x="230" y="398"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Play" width="28" height="28"/>
+    </resources>
 </document>
